# SocketDebugger

./: .gitignore  CMakeLists.txt  LICENSE  README.md  basictreewidget.cpp  basictreewidget.h  createobject.cpp  createobject.h  createobject.ui  createvaluequery.cpp  createvaluequery.h  createvaluequery.ui  debugerwidget.cpp  debugerwidget.h  debugerwidget.ui  debugwidget.cpp  debugwidget.h  debugwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plandetailswidget.cpp  plandetailswidget.h  plandetailswidget.ui  planwidget.cpp  planwidget.h  planwidget.ui  recordwidget.cpp  recordwidget.h  recordwidget.ui  structs.h  toolwidget.cpp  toolwidget.h  widget.cpp  widget.h  widget.ui
object/: debuggermanager.cpp  debuggermanager.h  debugobject.cpp  debugobject.h  funchelper.cpp  funchelper.h  tcpserver.cpp  tcpserver.h  tcpsocket.cpp  tcpsocket.h  typesocket.cpp  udpsocket.cpp  udpsocket.h
